# ytvpodcasts

./: .editorconfig  .env.example  .gitignore  .prettierrc.json  AGENTS.md  ARCHITECTURE.md  Dockerfile  GEMINI.md  Makefile  Procfile  alembic.ini  config.py  database.py  docker-compose.yml  manager.py  models.py  nginx.conf  nginx.conf.template  pyproject.toml  readme.md  vpodcasts.code-workspace  webapp.py  ypd.py
.agents/rules/: angular-guidelines.md
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yml
.github/workflows/: test.yml
.zed/: settings.json
alembic/: env.py
alembic/versions/: 53dfc6100e78_add_create_date_to_episode_table.py  6a48a6bb1587_create_download_tasks_table.py  93ea1ec1415a_initial_migration.py  a44826fec1f7_add_audio_file_size_and_type.py  afa7b6c5cc9d_init_episode_table.py  cc6f6873c467_add_is_archived_to_episode_table.py
dashboard/: .prettierrc.json  README.md  angular.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  proxy.conf.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
dashboard-ng/: angular.json  package.json  pnpm-lock.yaml
dashboard-ng/src/: styles.scss
dashboard-ng/src/app/: app.html  app.scss  app.spec.ts  app.ts
dashboard-ng/src/app/components/cast-input/: cast-input.html  cast-input.scss  cast-input.ts
dashboard-ng/src/app/components/episode-meta/: episode-meta.html  episode-meta.ts
dashboard-ng/src/app/pages/episodes/: episodes.ts
dashboard-ng/src/app/services/: notification.service.ts
dashboard/src/: App.css  App.tsx  CastInput.tsx  EpisodesList.tsx  TaskList.tsx  api.ts  index.html  main.tsx  routeTree.gen.ts  stores.ts  theme.ts  types.ts  utils.ts
dashboard/src/__tests__/: utils.test.ts
dashboard/src/app/: app.config.ts  app.routes.ts  app.scss  stores.ts  types.ts  utils.ts
dashboard/src/app/components/episode-details-dialog/: episode-details-dialog.html  episode-details-dialog.scss  episode-details-dialog.ts
dashboard/src/app/components/episode-meta/: episode-meta.html  episode-meta.scss  episode-meta.ts
dashboard/src/app/components/episode-player/: episode-player.html  episode-player.scss  episode-player.ts
dashboard/src/app/pages/episodes/: episodes.html  episodes.scss  episodes.ts
dashboard/src/app/pages/tasks/: tasks.html  tasks.scss  tasks.ts
dashboard/src/app/services/: event-stream.service.ts
dashboard/src/components/: CastInput.tsx  EpisodeMeta.tsx  EpisodePlayer.tsx  EventStream.tsx  TaskUpdater.tsx  taskUpdater.tsx  toastify.tsx
dashboard/src/routes/: __root.tsx  index.tsx  pg.tsx  tasks.tsx
docker/: Dockerfile  docker-compose.yml  nginx.conf.template  start.sh  supervisord.conf
tests/: conftest.py  test_api.py
vpodcasts/: __init__.py  config.py  database.py  huey_tasks.py  models.py  natstest.py  taskiq_broker.py  webapp.py  ypd.py
vpodcasts/templates/: index.html
