[project]
name = "vpodcasts"
version = "0.1.0"
description = "Private Podcast From Videos"
requires-python = "==3.13.*"
dependencies = [
  "feedgen>=1.0.0",
  "lxml==6.0.2",
  "python-dateutil==2.9.0.post0",
  "six>=1.17.0",
  "python-dotenv>=1.2.2",
  "click>=8.3.2",
  "supervisor>=4.3.0",
  "honcho>=2.0.0",
  "sqlmodel>=0.0.38",
  "alembic>=1.18.4",
  "fastapi[standard]>=0.136.0",
  "uvicorn[standard]>=0.44.0",
  "uvloop>=0.22.1",
  "httptools>=0.7.1",
  "nats-py>=2.14.0",
  "yt-dlp[default]>=2026.3.17",
  "loguru>=0.7.3",
  "taskiq>=0.12.2",
  "taskiq-nats>=0.6.0",
  "taskiq-fastapi>=0.5.0",
  "filelock>=3.28.0",
]

[tool.uv]
# uv-specific configuration can go here.

[dependency-groups]
test = [
  "pytest>=8.0",
  "httpx>=0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.basedpyright]
ignore = [
  ".venv",
  ".venv-devcontainer",
  "alembic",
  "**/node_modules",
  "**/__pycache__",
]
reportExplicitAny = false
reportAny = false
reportUnusedCallResult = false
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnnecessaryTypeIgnoreComment = "none"
reportUntypedBaseClass = "none"
reportUntypedFunctionDecorator = "none"
reportPrivateUsage = "none"
reportOptionalSubscript = "none"
reportOptionalMemberAccess = "none"
reportOptionalCall = "none"
